Migrated from local to online hosted db on aiven

--- a/Server_Side/appsettings.json
+++ b/Server_Side/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=cvizard;user=root;password=Nana@1962;"
+    "DefaultConnection": "Server=cvizard-arpanmishra1080-0af3.b.aivencloud.com;Port=16136;Database=defaultdb;User ID=avnadmin;Password=AVNS_rvMWrRMQKd5hYXjkBTA;SslMode=Required;AllowPublicKeyRetrieval=true;"
   },
   "Jwt": {
     "Key": "rtWpvRiRYGn1hbjbnAh7Ddqy4jHwjkenIMaKYoXuSbE=",
